Add color scheme

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,7 @@
 :root {
-  --primary: hotpink;
-  --secondary: skyblue;
+  --primary: #5c374c;
+  --secondary: #985277;
+  --side: #ce6a85;
+  --highlight1: #ff8c61;
+  --highlight2: #faa275;
 }
