--- a/src/scss/components/_navigation.scss
+++ b/src/scss/components/_navigation.scss
@@ -8,12 +8,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #333;
+  background: var(--highlight1);
   color: white;
   text-decoration: none;
   font-size: 1.4em;
 }
 
 .navigation__link--active {
-  background: hotpink;
+  background: var(--side);
 }
