Add createquestion site & style

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -6,3 +6,4 @@
 @import 'components/main-grid';
 @import 'components/main-header';
 @import 'components/navigation';
+@import 'components/createquestion';
