Add Profile Site style & content

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,3 +7,4 @@
 @import 'components/main-header';
 @import 'components/navigation';
 @import 'components/createquestion';
+@import 'components/profile';
